# vicky

./: .pre-commit-config.yaml  pyproject.toml
app/: run.py  settings.py
tests/: .gitkeep
